Most code written

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="simon_says">Simon Says</string>
     <string name="main_menu">Main Menu</string>
     <string name="start_game">Start Game</string>
+    <string name="restart">RESTART</string>
+    <string name="_0">0</string>
 </resources>
